[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-docs"
version = "0.1.0"
description = "LLM-agent-optimized CLI for OpenClaw documentation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rapidfuzz>=3.6",
    "trafilatura>=2.0",
    "markdown-it-py>=3.0",
]

[project.scripts]
openclaw-docs = "openclaw_docs.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_docs"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
