[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-docs"
version = "2026.3.4"
description = "LLM-agent-optimized CLI for OpenClaw documentation"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28",
    "rapidfuzz>=3.14",
    "trafilatura>=2.0",
    "markdown-it-py>=4.0",
    "platformdirs>=4.9",
]

[project.scripts]
openclaw-docs = "openclaw_docs.cli:cli"
openclawdocs = "openclaw_docs.cli:cli"
ocdocs = "openclaw_docs.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw_docs"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
